# Schema-Validator

./: .gitignore  .railwayignore  Procfile  README.md  Schema.py  cloudbuild.yaml  database.py  deploy-railway.md  docker-compose.yml  dockerfile  main.py  nixpacks.toml  package-lock.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  start.sh
backend/: database.py  main.py
backend/tests/: test_main.py
frontend/: build.sh  package-lock.json  package.json  render.yaml  server.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.test.js  React.jsx  index.css
intern_project/: Schema.py  config.yaml  database.py  main.py  test_main.py
tests/: test.yaml
